# black-jack

./: .gitignore  main.py  pyproject.toml
src/: chip.py  deck.py  hand.py
src/common/: suits_and_ranks.py
tests/: test_black_jack_game.py
